# TOEI-105 ### Added - 勘定科目編集を追加

--- a/views/accountTitles/accountTitleCategory/add.ejs
+++ b/views/accountTitles/accountTitleCategory/add.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('title') %>
 科目分類登録
 <%- contentFor('displayId') %>
-Aa-16
+AT-02
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
@@ -11,8 +11,8 @@ Aa-16
     <% /* フォーム */ %>
     <form method="post" class="form-horizontal">
         <div class="menu-group">
-            <%- include('../common/errorMessage') %>
-            <%- include('../common/successMessage') %>
+            <%- include('../../common/errorMessage') %>
+            <%- include('../../common/successMessage') %>
         </div>
 
         <% /* 登録・更新共通部 */ %>
