--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -32,17 +32,17 @@
                         <li class="<%= (displayId === 'Aa-8') ? 'active': ''; %>"><a href="/ticketTypeGroups">
                                         <i class="glyphicon glyphicon-list"></i> 券種グループ検索</a>
                         </li>
-                        <li class="<%= (displayId === 'Aa-16') ? 'active': ''; %>"><a href="/accountTitles/accountTitleCategory/new">
+                        <li class="<%= (displayId === 'AT-02') ? 'active': ''; %>"><a href="/accountTitles/accountTitleCategory/new">
                                         <i class="glyphicon glyphicon-plus"></i> 科目分類登録</a>
                         </li>
-                        <li class="<%= (displayId === 'Aa-16') ? 'active': ''; %>"><a href="/accountTitles/accountTitleSet/new">
+                        <li class="<%= (displayId === 'AT-03') ? 'active': ''; %>"><a href="/accountTitles/accountTitleSet/new">
                                         <i class="glyphicon glyphicon-plus"></i> 科目登録</a>
                         </li>
-                        <li class="<%= (displayId === 'Aa-16') ? 'active': ''; %>"><a href="/accountTitles/accountTitle/new">
+                        <li class="<%= (displayId === 'AT-04') ? 'active': ''; %>"><a href="/accountTitles/new">
                                         <i class="glyphicon glyphicon-plus"></i> 細目登録</a>
                         </li>
-                        <li class="<%= (displayId === 'Aa-17') ? 'active': ''; %>"><a href="/accountTitles">
-                                        <i class="glyphicon glyphicon-list"></i> 科目検索</a>
+                        <li class="<%= (displayId === 'AT-01') ? 'active': ''; %>"><a href="/accountTitles">
+                                        <i class="glyphicon glyphicon-list"></i> 細目検索</a>
                         </li>
                         <li class="<%= (displayId === 'Aa-18') ? 'active': ''; %>"><a href="/serviceTypes/add">
                                         <i class="glyphicon glyphicon-plus"></i> 興行区分登録</a>
