--- a/views/accountTitles/accountTitleCategory/form.ejs
+++ b/views/accountTitles/accountTitleCategory/form.ejs
@@ -1,28 +1,7 @@
-<div class="form-group">
-    <label for="inCodeSet[codeValue]" class="col-sm-3 control-label label-title">
-        科目分類<font color="red">＊</font>
-    </label>
-    <div class="col-sm-9">
-        <select class="form-control" name="inCodeSet[codeValue]">
-            <option value="">選択してください</option>
-            <% for (const accountTitleCategory of accountTitleCategories) { %>
-            <option value="<%= accountTitleCategory.codeValue %>" <% if (forms.inCodeSet.codeValue===accountTitleCategory.codeValue)
-                { %> selected
-                <% } %>>
-                <%= accountTitleCategory.name %>
-            </option>
-            <% } %>
-        </select>
-        <p class="error message text-danger">
-            <% if (errors && errors['inCodeSet.codeValue']) { %>
-            <%- errors['inCodeSet.codeValue'].msg %>
-            <% } %>
-        </p>
-    </div>
-</div>
+<% /* 科目分類コード */ %>
 <div class="form-group">
     <label for="codeValue" class="col-sm-3 control-label label-title">
-        科目コード<font color="red">＊</font>
+        科目分類コード<font color="red">＊</font>
     </label>
     <div class="col-sm-9">
         <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64 value="<%= forms.codeValue %>">
@@ -36,7 +15,7 @@
 </div>
 <div class="form-group">
     <label for="name" class="col-sm-3 control-label label-title">
-        科目名称<font color="red">＊</font>
+        科目分類名称<font color="red">＊</font>
     </label>
     <div class="col-sm-9">
         <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
