--- a/views/creativeWorks/movie/edit.ejs
+++ b/views/creativeWorks/movie/edit.ejs
@@ -27,7 +27,7 @@ Aa-9
         </div>
 
         <% /* 登録・更新共通部 */ %>
-        <%- include('form', { forms: forms }) %>
+        <%- include('form', { forms: forms, isNew: true }) %>
 
         <% /* 更新ボタン */ %>
         <div class="form-group">
