--- a/views/accountTitles/accountTitleCategory/add.ejs
+++ b/views/accountTitles/accountTitleCategory/add.ejs
@@ -16,7 +16,7 @@ AT-02
         </div>
 
         <% /* 登録・更新共通部 */ %>
-        <%- include('form', { forms: forms }) %>
+        <%- include('form', { forms: forms, isNew: true }) %>
 
         <% /* 登録ボタン */ %>
         <div class="form-group">
