--- a/views/accountTitles/accountTitleSet/edit.ejs
+++ b/views/accountTitles/accountTitleSet/edit.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('title') %>
-科目分類編集
+科目登録
 <%- contentFor('displayId') %>
-AT-02
+AT-03
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
