# TOEI-105 ### Added - 勘定科目編集を追加

--- a/views/accountTitles/form.ejs
+++ b/views/accountTitles/form.ejs
@@ -31,7 +31,7 @@
 
 <div class="form-group">
     <label for="codeValue" class="col-sm-3 control-label label-title">
-        科目コード<font color="red">＊</font>
+        細目コード<font color="red">＊</font>
     </label>
     <div class="col-sm-9">
         <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64 value="<%= forms.codeValue %>"
@@ -48,7 +48,7 @@
 
 <div class="form-group">
     <label for="name" class="col-sm-3 control-label label-title">
-        科目名称<font color="red">＊</font>
+        細目名称<font color="red">＊</font>
     </label>
     <div class="col-sm-9">
         <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
