# CHEVRE-84 ### Changed - イベント汎用性強化

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -68,6 +68,13 @@
                                     maxlength=10>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label text-right">座席指定<font color="red">＊</font></label>
+                            <div class="col-sm-9 form-inline">
+                                <label class="checkbox-inline"><input type="checkbox" value="1" name="reservedSeatsAvailable"
+                                        checked>座席指定あり</label>
+                            </div>
+                        </div>
                         <table class="table table-bordered">
                             <thead>
                                 <th class="text-center">パフォマンス</th>
