--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -96,6 +96,19 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label for="name" class="col-sm-3 control-label label-title">
+                            </label>
+                            <div class="col-sm-9">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="reservedSeatsAvailable" value="1"
+                                        id="reservedSeatsAvailable">
+                                    <label class="form-check-label" for="reservedSeatsAvailable">
+                                        座席指定あり
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
