--- a/views/common/complete.ejs
+++ b/views/common/complete.ejs
@@ -7,6 +7,6 @@
 <%- contentFor('scripts') %>
 
 <%- contentFor('body') %>
-<div class="col-sm-12">
+<div class="col-md-12">
     <h3>登録完了</h3>
 </div>
