--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,7 +6,7 @@
     <!--Header-->
     <%- include('./header') %>
 
-    <div class="container">
+    <div class="contents-width mx-auto px-3 py-5">
         <!-- content -->
         <div class="row">
             <!-- left -->
@@ -19,6 +19,7 @@
             </div>
         </div>
     </div>
+    
 
     <script>
         $(function () {
