--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -6,11 +6,11 @@ Aa-13
 <%- contentFor('scripts') %>
 <%- contentFor('body') %>
 
-<div class="col-sm-12">
+<div class="col-md-12">
     <h2>単価仕様</h2>
     <h2>上映方式チャージ仕様</h2>
     <div class="table-responsive">
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered table-striped mb-0">
             <thead>
                 <tr>
                     <% videoFormaChargeSpecifications.forEach((specification) => { %>
@@ -33,10 +33,10 @@ Aa-13
     </div>
 </div>
 
-<div class="col-sm-12">
+<div class="col-md-12">
     <h2>音響方式チャージ仕様</h2>
     <div class="table-responsive">
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered table-striped mb-0">
             <thead>
                 <tr>
                     <% soundFormaChargeSpecifications.forEach((specification) => { %>
@@ -59,10 +59,10 @@ Aa-13
     </div>
 </div>
 
-<div class="col-sm-12">
+<div class="col-md-12">
     <h2>ムビチケ券種区分チャージ仕様</h2>
     <div class="table-responsive">
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered table-striped mb-0">
             <thead>
                 <tr>
                     <th>
