--- a/views/ticketTypeGroup/_listTicketTypes.ejs
+++ b/views/ticketTypeGroup/_listTicketTypes.ejs
@@ -1,4 +1,4 @@
-<div class="modal fade" id="listModal" tabindex="-1">
+<div class="modal" id="listModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -8,7 +8,7 @@
             <div class="modal-body">
                 <div class="panel-body">
                     <div id="list" class="table-responsive" style="display:block;">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-striped mb-0">
                           <thead>
                             <tr>
                               <th>券種名</th>
