--- a/views/accountTitles/accountTitleCategory/form.ejs
+++ b/views/accountTitles/accountTitleCategory/form.ejs
@@ -1,9 +1,9 @@
 <% /* 科目分類コード */ %>
-<div class="form-group">
-    <label for="codeValue" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="codeValue" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         科目分類コード<font color="red">＊</font>
     </label>
-    <div class="col-sm-9">
+    <div class="col-md-9">
         <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64 value="<%= forms.codeValue %>"
             <% if (!isNew) { %> readonly
         <% } %>>
@@ -15,11 +15,11 @@
         </p>
     </div>
 </div>
-<div class="form-group">
-    <label for="name" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="name" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         科目分類名称<font color="red">＊</font>
     </label>
-    <div class="col-sm-9">
+    <div class="col-md-9">
         <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
         <p class="message">64文字以内でご入力ください。</p>
         <p class="error message text-danger">
