--- a/views/accountTitles/edit.ejs
+++ b/views/accountTitles/edit.ejs
@@ -7,9 +7,9 @@ AT-04
 <%- contentFor('scripts') %>
 
 <%- contentFor('body') %>
-<div class="col-sm-12 form-container">
+<div class="form-container">
     <% /* フォーム */ %>
-    <form method="post" class="form-horizontal">
+    <form method="post" class="p-3 bg-light-gray">
         <div class="menu-group">
             <%- include('../common/errorMessage') %>
             <%- include('../common/successMessage') %>
@@ -19,7 +19,7 @@ AT-04
         <%- include('form', { forms: forms, isNew: false }) %>
 
         <% /* 更新ボタン */ %>
-        <div class="form-group">
+        <div class="form-group row">
             <div class="btn-area panel-body">
                 <a class="btn btn-ok btn-primary">更新する</a>
             </div>
