--- a/views/common/master/_loading.ejs
+++ b/views/common/master/_loading.ejs
@@ -1,5 +1,5 @@
-<div class="modal fade loading" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
+<div class="modal" id="loadingModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body">
                 <div class="text-center">検索しています...</div>
@@ -7,3 +7,4 @@
         </div>
     </div>
 </div>
+
