--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -1,4 +1,4 @@
-<div class="modal fade" id="newModal" tabindex="-1">
+<div class="modal" id="newModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -7,10 +7,10 @@
             </div>
             <div class="modal-body">
                 <div class="panel-body">
-                    <form class="form-horizontal">
+                    <form class="p-3 bg-light-gray">
                         <div class="form-group form-inline">
-                            <label class="col-sm-3 control-label text-right" for="theater">劇場<font color="red">＊</font></label>
-                            <div class="col-sm-9 form-inline">
+                            <label class="col-md-3 control-label text-right" for="theater">劇場<font color="red">＊</font></label>
+                            <div class="col-md-9 form-inline">
                                 <select class="form-control" name="theater">
                                     <option value="" disabled selected>選択してください</option>
                                     <% for (const movieTheater of movieTheaters) { %>
@@ -24,24 +24,24 @@
                             </div>
                         </div>
                         <div class="form-group form-inline">
-                            <label class="col-sm-3 control-label text-right" for="screen">作品<font color="red">＊</font></label>
-                            <div class="col-sm-9 form-inline">
+                            <label class="col-md-3 control-label text-right" for="screen">作品<font color="red">＊</font></label>
+                            <div class="col-md-9 form-inline">
                                 <select class="form-control" name="screeningEventSeriesId">
                                     <option value="">劇場を選択してください</option>
                                 </select>
                             </div>
                         </div>
                         <div class="form-group form-inline">
-                            <label class="col-sm-3 control-label text-right" for="screen">スクリーン<font color="red">＊</font></label>
-                            <div class="col-sm-9">
+                            <label class="col-md-3 control-label text-right" for="screen">スクリーン<font color="red">＊</font></label>
+                            <div class="col-md-9">
                                 <select class="form-control" name="screen">
                                     <option value="">劇場を選択してください</option>
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label text-right">登録期間<font color="red">＊</font></label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label text-right">登録期間<font color="red">＊</font></label>
+                            <div class="col-md-9 form-inline">
                                 <input class="form-control datepicker" name="screeningDateStart" placeholder="YYYY/MM/DD"
                                     maxlength=10>
                                 〜
@@ -49,9 +49,9 @@
                                     maxlength=10>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label text-right">曜日<font color="red">＊</font></label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label text-right">曜日<font color="red">＊</font></label>
+                            <div class="col-md-9 form-inline">
                                 <label class="checkbox-inline"><input type="checkbox" value="1" name="weekDay" checked>月</label>
                                 <label class="checkbox-inline"><input type="checkbox" value="2" name="weekDay" checked>火</label>
                                 <label class="checkbox-inline"><input type="checkbox" value="3" name="weekDay" checked>水</label>
@@ -61,16 +61,16 @@
                                 <label class="checkbox-inline"><input type="checkbox" value="0" name="weekDay" checked>日</label>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label text-right" for="onlineDisplayStartDate">オンライン表示開始日</label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label text-right" for="onlineDisplayStartDate">オンライン表示開始日</label>
+                            <div class="col-md-9 form-inline">
                                 <input class="form-control datepicker" name="onlineDisplayStartDate" placeholder="YYYY/MM/DD"
                                     maxlength=10>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label text-right">座席指定<font color="red">＊</font></label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label text-right">座席指定<font color="red">＊</font></label>
+                            <div class="col-md-9 form-inline">
                                 <label class="checkbox-inline"><input type="checkbox" value="1" name="reservedSeatsAvailable"
                                         checked>座席指定あり</label>
                             </div>
@@ -97,7 +97,7 @@
                                         }) %>
                                     </td>
                                     <td class="form-inline">
-                                        <div class="col-sm-12">
+                                        <div class="col-md-12">
                                             <%- include('../../common/part/_timeSelector', {
                                             hourName: 'startTimeHour',
                                             minuteName: 'startTimeMinute'
@@ -105,7 +105,7 @@
                                         </div>
                                     </td>
                                     <td class="form-inline">
-                                        <div class="col-sm-12">
+                                        <div class="col-md-12">
                                             <%- include('../../common/part/_timeSelector', {
                                             hourName: 'endTimeHour',
                                             minuteName: 'endTimeMinute'
@@ -129,21 +129,21 @@
                                 <% } %>
                             </tbody>
                         </table>
-                        <!-- <div class="form-group">
+                        <!-- <div class="form-group row">
                             <%- include('../../common/part/_timeSelector', {
                                 label: '開場時刻',
                                 hourName: 'doorTimeHour',
                                 minuteName: 'doorTimeMinutes'
                             }) %>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group row">
                             <%- include('../../common/part/_timeSelector', {
                                 label: '開始時刻',
                                 hourName: 'startTimeHour',
                                 minuteName: 'startTimeMinutes'
                             }) %>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group row">
                             <%- include('../../common/part/_timeSelector', {
                                 label: '終了時刻',
                                 hourName: 'endTimeHour',
