--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -1,4 +1,4 @@
-<div class="modal fade" id="editModal" tabindex="-1">
+<div class="modal" id="editModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -7,33 +7,33 @@
             </div>
             <div class="modal-body">
                 <div class="panel-body">
-                    <form class="form-horizontal">
+                    <form class="p-3 bg-light-gray">
                         <ul class="list-group">
                             <li class="list-group-item film">作品 : <span></span></li>
                             <li class="list-group-item theater">劇場 : <span></span></li>
                             <li class="list-group-item day">上映日 : <span></span></li>
                         </ul>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="doorTime">開場時刻</label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label" for="doorTime">開場時刻</label>
+                            <div class="col-md-9 form-inline">
                                 <%- include('../../common/part/_timeSelector', {
                                     hourName: 'doorTimeHour',
                                     minuteName: 'doorTimeMinutes'
                                 }) %>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="startTime">開始時刻</label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label" for="startTime">開始時刻</label>
+                            <div class="col-md-9 form-inline">
                                 <%- include('../../common/part/_timeSelector', {
                                     hourName: 'startTimeHour',
                                     minuteName: 'startTimeMinutes'
                                 }) %>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="endTime">終了時刻</label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label" for="endTime">終了時刻</label>
+                            <div class="col-md-9 form-inline">
                                 <%- include('../../common/part/_timeSelector', {
                                     hourName: 'endTimeHour',
                                     minuteName: 'endTimeMinutes'
@@ -41,14 +41,14 @@
                             </div>
                         </div>
                         <div class="form-group form-inline">
-                            <label class="col-sm-3 control-label" for="screen">スクリーン</label>
-                            <div class="col-sm-9">
+                            <label class="col-md-3 control-label" for="screen">スクリーン</label>
+                            <div class="col-md-9">
                                 <select class="form-control" name="screen"></select>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-12" for="ticketTypeGroup">券種グループ</label>
-                            <div class="col-sm-12">
+                        <div class="form-group row">
+                            <label class="control-label col-md-12" for="ticketTypeGroup">券種グループ</label>
+                            <div class="col-md-12">
                                 <select class="form-control" name="ticketTypeGroup">
                                     <option value="">選択してください</option>
                                     <% for (ticketType of ticketGroups) { %>
@@ -59,9 +59,9 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="saleStartDate">販売開始日</label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label" for="saleStartDate">販売開始日</label>
+                            <div class="col-md-9 form-inline">
                                 <input class="form-control datepicker" name="saleStartDate" placeholder="YYYY/MM/DD"
                                     maxlength=10>
                                 日
@@ -71,23 +71,23 @@
                                 }) %>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="onlineDisplayStartDate">オンライン表示開始日</label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label" for="onlineDisplayStartDate">オンライン表示開始日</label>
+                            <div class="col-md-9 form-inline">
                                 <input class="form-control datepicker" name="onlineDisplayStartDate" placeholder="YYYY/MM/DD"
                                     maxlength=10>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="maxSeatNumber">上限枚数</label>
-                            <div class="col-sm-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-3 control-label" for="maxSeatNumber">上限枚数</label>
+                            <div class="col-md-9 form-inline">
                                 <input class="form-control" type="number" name="maxSeatNumber" maxlength=10>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="name" class="col-sm-3 control-label label-title">
+                        <div class="form-group row">
+                            <label for="name" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                             </label>
-                            <div class="col-sm-9">
+                            <div class="col-md-9">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="mvtkExcludeFlg" value="1" id="mvtkExcludeFlg">
                                     <label class="form-check-label" for="mvtkExcludeFlg">
@@ -96,10 +96,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="name" class="col-sm-3 control-label label-title">
+                        <div class="form-group row">
+                            <label for="name" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                             </label>
-                            <div class="col-sm-9">
+                            <div class="col-md-9">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="reservedSeatsAvailable" value="1"
                                         id="reservedSeatsAvailable">
