--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -3,16 +3,15 @@
 <%- contentFor('displayId') %>
 Aa-4
 <%- contentFor('styles') %>
-<link href="/css/scheduler.css" rel="stylesheet">
 <%- contentFor('scripts') %>
 <script src="/js/lodash.debounce.min.js"></script>
 <script src="/js/master/events/screeningEvent.js"></script>
 <%- contentFor('body') %>
-<div class="col-sm-12">
-    <form class="form-inline search">
-        <div class="form-row">
-            <div class="form-group">
-                <label>劇場</label>
+<div class="form-container search p-3 bg-light-gray mb-4">
+    <form>
+        <div class="form-group row">
+            <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">劇場</label>
+            <div class="col-md-9">
                 <select class="form-control" name="theater">
                     <option value="">選択してください</option>
                     <% for (const movieTheater of movieTheaters) { %>
@@ -20,35 +19,41 @@ Aa-4
                     <% } %>
                 </select>
             </div>
-            <div class="form-group">
-                <label>上映日</label>
-                <input autocomplete="off" class="form-control datepicker" name="date" placeholder="選択してください" maxlength=10>
+        </div>
+        <div class="form-group row">
+            <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">上映日</label>
+            <div class="col-md-9">
+                <input autocomplete="off" class="form-control datepicker" name="date" placeholder="選択してください"
+                    maxlength="10">
             </div>
-        </div><br>
-        <div class="form-row">
-            <div class="form-group">
-                <label>日付</label>
+        </div>
+        <div class="form-group row">
+            <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">日付</label>
+            <div class="col-md-9 form-inline py-3">
                 <input class="form-check-input" type="radio" name="days" id="radio-days-1" value="1" checked>
-                <label class="form-check-label" for="radio-days-1">1日</label>
+                <label class="form-check-label mr-3" for="radio-days-1">1日</label>
                 <input class="form-check-input" type="radio" name="days" id="radio-days-3" value="3">
-                <label class="form-check-label" for="radio-days-3">3日</label>
+                <label class="form-check-label mr-3" for="radio-days-3">3日</label>
                 <input class="form-check-input" type="radio" name="days" id="radio-days-7" value="7">
                 <label class="form-check-label" for="radio-days-7">7日</label>
             </div>
-            <div class="form-group">
-                <label>シアター</label>
+        </div>
+        <div class="form-group row">
+            <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">シアター</label>
+            <div class="col-md-9">
                 <select class="form-control" name="screen">
                     <option value="">劇場を選択してください</option>
                 </select>
             </div>
-            <button class="btn btn-default search-button">検索</button>
+        </div>
+        <div class="panel-body">
+            <button type="button" class="btn btn-primary search-button">検索する</button>
+            <button type="button" class="btn btn-primary pull-right add-button">新規作成</button>
         </div>
     </form>
-    <div class="panel-body">
-        <a class="btn btn-primary pull-right add-button" href="#" role="button">新規作成</a>
-    </div>
-    <div class="scheduler" style="display: none"></div>
 </div>
+
+<div class="scheduler" style="display: none"></div>
 
 <%- include('add') %>
 <%- include('edit') %>
