--- a/views/events/screeningEventSeries/add.ejs
+++ b/views/events/screeningEventSeries/add.ejs
@@ -9,9 +9,9 @@ Aa-2
 <script src="/js/master/events/screeningEventSeriesAddEdit.js"></script>
 
 <%- contentFor('body') %>
-<div class="col-sm-12 form-container">
+<div class="form-container">
     <% /* フォーム */ %>
-    <form method="post" class="form-horizontal" id="movie_product">
+    <form method="post" class="p-3 bg-light-gray" id="movie_product">
         <div class="menu-group">
             <%- include('../../common/errorMessage') %>
             <%- include('../../common/successMessage') %>
@@ -20,10 +20,8 @@ Aa-2
         <%- include('form', { forms: forms }) %>
 
         <% /* 登録ボタン */ %>
-        <div class="form-group">
-            <div class="btn-area panel-body">
-                <a class="btn btn-ok btn-primary">登録する</a>
-            </div>
+        <div class="btn-area panel-body">
+            <button type="button" class="btn btn-ok btn-primary">登録する</button>
         </div>
     </form>
 </div>
