--- a/views/events/screeningEventSeries/edit.ejs
+++ b/views/events/screeningEventSeries/edit.ejs
@@ -8,9 +8,9 @@ Aa-2
 <script src="/js/master/events/screeningEventSeriesAddEdit.js"></script>
 
 <%- contentFor('body') %>
-<div class="col-sm-12 form-container">
+<div class="form-container">
     <% /* フォーム */ %>
-    <form method="post" class="form-horizontal" id="movie_product">
+    <form method="post" class="p-3 bg-light-gray" id="movie_product">
         <input type="hidden" name="id" value="<%= forms.id %>">
         <div class="menu-group">
             <%- include('../../common/errorMessage') %>
@@ -20,7 +20,7 @@ Aa-2
         <%- include('form', { forms: forms }) %>
 
         <% /* 更新ボタン */ %>
-        <div class="form-group">
+        <div class="form-group row">
             <div class="btn-area panel-body">
                 <a class="btn btn-ok btn-primary">更新する</a>
             </div>
