--- a/views/serviceTypes/add.ejs
+++ b/views/serviceTypes/add.ejs
@@ -8,19 +8,20 @@ Aa-16
 <script src="/js/master/serviceTypes/form.js"></script>
 
 <%- contentFor('body') %>
-<div class="col-sm-12 form-container">
+<div class="form-container">
     <% /* フォーム */ %>
-    <form method="post" class="form-horizontal">
+    <form method="post" class="p-3 bg-light-gray">
         <div class="menu-group">
             <%- include('../common/errorMessage') %>
             <%- include('../common/successMessage') %>
         </div>
-        <div class="form-group ">
-            <label for="id" class="col-sm-3 control-label label-title">
+        <div class="form-group row">
+            <label for="id" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                 興行区分コード<font color="red">＊</font>
             </label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value="<%= forms.id %>">
+            <div class="col-md-9">
+                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64
+                    value="<%= forms.id %>">
                 <p class="message">
                     <% /*半角64文字以内でご入力ください。*/ %>
                     半角64文字以内でご入力ください。
@@ -37,10 +38,8 @@ Aa-16
         <%- include('form', { forms: forms }) %>
 
         <% /* 登録ボタン */ %>
-        <div class="form-group">
-            <div class="btn-area panel-body">
-                <a class="btn btn-ok btn-primary">登録する</a>
-            </div>
+        <div class="btn-area panel-body">
+            <button type="button" class="btn btn-ok btn-primary">登録する</button>
         </div>
     </form>
 </div>
