--- a/views/serviceTypes/form.ejs
+++ b/views/serviceTypes/form.ejs
@@ -1,8 +1,8 @@
-<div class="form-group">
-    <label for="name" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="name" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         名称<font color="red">＊</font>
     </label>
-    <div class="col-sm-9">
+    <div class="col-md-9">
         <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
         <p class="message">
             全角64文字以内でご入力ください。
