--- a/views/ticketType/add.ejs
+++ b/views/ticketType/add.ejs
@@ -9,18 +9,18 @@ Aa-5
 <script src="/js/bootstrap.colorpickersliders.js"></script>
 <script src="/js/master/ticketTypeAdd.js"></script>
 <%- contentFor('body') %>
-<div class="col-sm-12 form-container">
-    <form method="post" class="form-horizontal">
+<div class="form-container p-3 bg-light-gray">
+    <form method="post">
         <div class="menu-group">
             <%- include('../common/errorMessage') %>
             <%- include('../common/successMessage') %>
         </div>
 
-        <div class="form-group ">
-            <label for="id" class="col-sm-3 control-label label-title">
+        <div class="form-group row">
+            <label for="id" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                 券種コード<font color="red">＊</font>
             </label>
-            <div class="col-sm-9">
+            <div class="col-md-9">
                 <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value=<%=forms.id
                     %>>
                 <p class="message">
@@ -36,10 +36,8 @@ Aa-5
 
         <%- include('form', { forms: forms }) %>
 
-        <div class="form-group">
-            <div class="btn-area panel-body">
-                <a class="btn btn-ok btn-primary">登録する</a>
-            </div>
+        <div class="btn-area panel-body">
+            <button type="button" class="btn btn-ok btn-primary">登録する</button>
         </div>
     </form>
 </div>
