--- a/views/ticketType/update.ejs
+++ b/views/ticketType/update.ejs
@@ -9,8 +9,8 @@ Aa-5
 <script src="/js/bootstrap.colorpickersliders.js"></script>
 <script src="/js/master/ticketTypeAdd.js"></script>
 <%- contentFor('body') %>
-<div class="col-sm-12 form-container">
-  <form method="post" class="form-horizontal">
+<div class="form-container">
+  <form method="post" class="p-3 bg-light-gray">
     <div class="menu-group">
       <%- include('../common/errorMessage') %>
       <%- include('../common/successMessage') %>
@@ -20,7 +20,7 @@ Aa-5
 
     <%- include('form', {forms: forms}) %>
 
-    <div class="form-group">
+    <div class="form-group row">
       <div class="btn-area panel-body">
         <a class="btn btn-ok btn-primary">更新する</a>
       </div>
