--- a/views/ticketTypeGroup/add.ejs
+++ b/views/ticketTypeGroup/add.ejs
@@ -9,19 +9,20 @@ Aa-7
 <script src="/js/master/ticketTypeGroup/ticketTypeGroupAddEdit.js"></script>
 
 <%- contentFor('body') %>
-<div class="col-sm-12 form-container">
-    <form method="post" class="form-horizontal" id="ticketTypeGroupsForm">
+<div class="form-container">
+    <form method="post" class="p-3 bg-light-gray" id="ticketTypeGroupsForm">
         <div class="menu-group">
             <%- include('../common/errorMessage') %>
             <%- include('../common/successMessage') %>
         </div>
 
-        <div class="form-group ">
-            <label for="id" class="col-sm-3 control-label label-title">
+        <div class="form-group row">
+            <label for="id" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                 券種グループコード<font color="red">＊</font>
             </label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value="<%= forms.id %>">
+            <div class="col-md-9">
+                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64
+                    value="<%= forms.id %>">
                 <p class="message">
                     半角64文字以内でご入力ください。
                 </p>
@@ -35,10 +36,8 @@ Aa-7
 
         <%- include('form', { forms: forms }) %>
 
-        <div class="form-group">
-            <div class="btn-area panel-body">
-                <a class="btn btn-ok btn-primary">登録する</a>
-            </div>
+        <div class="btn-area panel-body">
+            <button type="button" class="btn btn-ok btn-primary">登録する</button>
         </div>
     </form>
 </div>
