--- a/views/ticketTypeGroup/form.ejs
+++ b/views/ticketTypeGroup/form.ejs
@@ -1,8 +1,8 @@
-<div class="form-group ">
-    <label for="name[ja]" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="name[ja]" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         券種グループ名<font color="red">＊</font>
     </label>
-    <div class="col-sm-9">
+    <div class="col-md-9">
         <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64 value="<%= forms.name.ja %>">
         <p class="message">
             全角64文字以内でご入力ください。
@@ -14,11 +14,11 @@
         </p>
     </div>
 </div>
-<div class="form-group ">
-    <label for="name[en]" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="name[en]" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         券種グループ名英<font color="red">＊</font>
     </label>
-    <div class="col-sm-9">
+    <div class="col-md-9">
         <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64 value="<%= forms.name.en %>">
         <p class="message">
         </p>
@@ -29,17 +29,17 @@
         </p>
     </div>
 </div>
-<div class="form-group ">
-    <label for="ticketTypes" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="ticketTypes" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         対象券種名<font color="red">＊</font>
     </label>
-    <div class="col-sm-9"></div>
+    <div class="col-md-9"></div>
 </div>
-<div class="form-group ">
-    <span for="price" class="col-sm-3  control-label label-title">
+<div class="form-group row">
+    <span for="price" class="col-md-3  pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         券種売上金額
     </span>
-    <div class="col-sm-9">
+    <div class="col-md-9">
         <input type="number" class="form-control" name="price" id="price" placeholder="" maxlength=10>
         <p class="error message text-danger">
             <% if (errors && errors.ticketTypes) { %>
@@ -47,8 +47,8 @@
             <% } %>
         </p>
     </div>
-    <div class="col-sm-3 control-label label-title"></div>
-    <div class="col-sm-9" id="price-list">
+    <div class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"></div>
+    <div id="price-list" class="mx-auto">
         <ul id="sortable1" class="connectedSortable">
 
         </ul>
@@ -64,11 +64,11 @@
         </ul>
     </div>
 </div>
-<div class="form-group ">
-    <label for="description.ja" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="description.ja" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         補足説明
     </label>
-    <div class="col-sm-9">
+    <div class="col-md-9">
         <input type="text" class="form-control" name="description[ja]" id="description.ja" placeholder="" maxlength=64
             value="<%= forms.description.ja %>">
         <p class="message">
@@ -81,11 +81,11 @@
         </p>
     </div>
 </div>
-<div class="form-group ">
-    <label for="description.en" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="description.en" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         補足説明英
     </label>
-    <div class="col-sm-9">
+    <div class="col-md-9">
         <input type="text" class="form-control" name="description[en]" id="description.en" placeholder="" maxlength=64
             value="<%= forms.description.en %>">
         <p class="message">
@@ -97,11 +97,11 @@
         </p>
     </div>
 </div>
-<div class="form-group ">
-    <label for="serviceType" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="serviceType" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         興行区分<font color="red">＊</font>
     </label>
-    <div class="col-sm-9">
+    <div class="col-md-9">
         <select name="serviceType" id="serviceType" class="form-control">
             <% for (let serviceType of serviceTypes) { %>
             <% if (forms.serviceType === serviceType.id) { %>
