--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -11,8 +11,8 @@ Aa-8
 <script src="/js/master/ticketTypeGroupsList.js"></script>
 <%- contentFor('body') %>
 <% /* フォーム */ %>
-<div class="col-sm-12 form-container search">
-    <form method="post" class="form-horizontal">
+<div class="form-container search">
+    <form method="post" class="p-3 bg-light-gray">
         <% /* 共通Hiddenコントロール */ %>
         <%- include('../common/master/_hidden') %>
         <div class="menu-group">
@@ -24,41 +24,39 @@ Aa-8
             <% } %>
         </div>
         <% /* 券種グループコード */ %>
-        <div class="form-group ">
-            <label for="id" class="col-sm-3 control-label label-title">
+        <div class="form-group row">
+            <label for="id" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                 券種グループコード
             </label>
-            <div class="col-sm-9">
+            <div class="col-md-9">
                 <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64>
             </div>
         </div>
         <% /* 券種グループ名 */ %>
-        <div class="form-group ">
-            <label for="name" class="col-sm-3 control-label label-title">
+        <div class="form-group row">
+            <label for="name" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                 券種グループ名
             </label>
-            <div class="col-sm-9">
+            <div class="col-md-9">
                 <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
             </div>
         </div>
         <% /* 検索ボタン */ %>
-        <div class="form-group">
-            <div class="panel-body">
-                <a class="btn btn-ok search btn-primary"><span>検索する</span></a>
-                <a class="reset-condition btn btn-danger"><span>検索内容リセット</span></a>
-            </div>
+        <div class="panel-body">
+            <button type="button" class="btn btn-ok search btn-primary">検索する</button>
+            <button type="button" class="reset-condition btn btn-danger">検索内容リセット</button>
         </div>
     </form>
 </div>
 <% /* 一覧 */ %>
-<div class="col-sm-12 form-container search">
+<div class="form-container search">
     <div>
-        <p id="searchedCount" style="display:none;">
+        <p class="mb-3" id="searchedCount" style="display:none;">
             検索結果$searched_count$件
         </p>
     </div>
-    <div id="list" class="table-responsive" style="display:none;">
-        <table class="table table-bordered table-striped">
+    <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
+        <table class="table table-bordered table-striped mb-0">
             <thead>
                 <tr>
                     <th>券種グループコード</th>
@@ -74,15 +72,15 @@ Aa-8
                     <td name="name.ja">$name.ja$</td>
                     <td name="itemOffered.serviceType.id">$itemOffered.serviceType.id$</td>
                     <td name="edit" class="center">
-                        <div class="btn-area">
-                            <a class="btn btn-list edit" href="/ticketTypeGroups/$id$/update">
-                                <span>編集</span>
+                        <div class="btn-area text-center">
+                            <a class="btn btn-primary btn-list edit" href="/ticketTypeGroups/$id$/update">
+                                <i class="fas fa-edit"></i>
                             </a>
                         </div>
                     </td>
                     <td name="popup" class="center popupListTicketType">
-                        <div class="btn-area">
-                            <a href="/ticketTypeGroups/ticketTypeList?id=$id$" class="btn btn-list edit">
+                        <div class="btn-area text-center">
+                            <a href="/ticketTypeGroups/ticketTypeList?id=$id$" class="btn btn-primary btn-list edit">
                                 <span>関連券種</span>
                             </a>
                         </div>
