--- a/views/ticketTypeGroup/update.ejs
+++ b/views/ticketTypeGroup/update.ejs
@@ -9,8 +9,8 @@ Aa-7
 <script src="/js/master/ticketTypeGroup/ticketTypeGroupAddEdit.js"></script>
 
 <%- contentFor('body') %>
-<div class="col-sm-12 form-container">
-    <form method="post" class="form-horizontal" id="ticketTypeGroupsForm">
+<div class="form-container">
+    <form method="post" class="p-3 bg-light-gray" id="ticketTypeGroupsForm">
         <div class="menu-group">
             <%- include('../common/errorMessage') %>
             <%- include('../common/successMessage') %>
@@ -20,7 +20,7 @@ Aa-7
 
         <%- include('form', { forms: forms }) %>
 
-        <div class="form-group">
+        <div class="form-group row">
             <div class="btn-area panel-body pull-left">
                 <a class="btn btn-ok btn-primary">更新する</a>
             </div>
