--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -186,7 +186,7 @@ header {
     }
 }
 
-.table {
+.scroll-horizontal .table {
     min-width: 736px;
     th, td {
         vertical-align: middle;
