--- a/views/ticketTypeGroup/update.ejs
+++ b/views/ticketTypeGroup/update.ejs
@@ -20,13 +20,9 @@ Aa-7
 
         <%- include('form', { forms: forms }) %>
 
-        <div class="form-group row">
-            <div class="btn-area panel-body pull-left">
-                <a class="btn btn-ok btn-primary">更新する</a>
-            </div>
-            <div class="btn-area panel-body pull-right">
-                <a class="btn btn-delete btn-danger">削除する</a>
-            </div>
+        <div class="btn-area panel-body">
+            <button type="button" class="btn btn-ok btn-primary">更新する</button>
+            <button type="button" class="btn btn-delete btn-danger">削除する</button>
         </div>
     </form>
 </div>
